# pretix-order-checkin

./: .gitignore  .update-locales.sh  MANIFEST.in  Makefile  README.md  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
order_checkin/: apps.py  signals.py
order_checkin/locale/: django.pot
order_checkin/locale/de/LC_MESSAGES/: django.po
pretix_order_checkin/: apps.py  signals.py
pretix_order_checkin/locale/: django.pot
pretix_order_checkin/locale/de_Informal/LC_MESSAGES/: django.po
pretix_order_checkin/templates/order_checkin/: checked_out_buttons.html
