[project]
name = "pretix-order-checkin"
dynamic = ["version"]
description = "Add a check-in button to the order detail and overview page"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Daniel Malik", email = "mail@fronbasal.de"},
]
maintainers = [
    {name = "Daniel Malik", email = "mail@fronbasal.de"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
order_checkin = "order_checkin:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/fronbasal/pretix-order-checkin"
repository = "https://github.com/fronbasal/pretix-order-checkin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "order_checkin.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
